feat: Add endpoint for creating enrollment
